# transitlens-platform

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CODEX.md  CONTRIBUTING.md  FIX_HANDOFF.md  HANDOFF.md  PHASE9_REPORT.md  PHASE9_UI_AUDIT.md  README.md  TASKS.md  Transitlens-platform-plan.md  config.yaml  eslint.config.js  index.html  main.py  package-lock.json  package.json  requirements.txt  tsconfig.app.json  vite.config.ts
app/: __init__.py  api_client.py  state.py  utils.py
backend/: README.md  pyproject.toml
backend/tests/: test_gateway.py
backend/transitlens_gateway/: __init__.py  app.py  clients.py  config.py  errors.py  models.py  reports.py  routes.py  sessions.py  store.py
demo_data/: README.md  candidate_a_plots.json  candidate_b.csv  candidate_b_plots.json  candidate_c_plots.json  sample_results.json
export/: __init__.py  csv_export.py  html_report.py  pdf_summary.py
scripts/: split_demo_data.py
src/: main.tsx  plotly-modules.d.ts  vite-env.d.ts
static/: style.css
tests/: AboutPage.test.tsx  AnalysisPage.test.tsx  App.test.tsx  DashboardPage.test.tsx  FileDropzone.test.tsx  MastExplorerPage.test.tsx  PredictionCard.test.tsx  ProjectSetupPage.test.tsx  ReportsPage.test.tsx  ResultsPage.test.tsx  ScientificMetricsPanel.test.tsx  SettingsPage.test.tsx  UploadPage.test.tsx  analysisPlot.test.ts  analysisService.test.ts  analysisValidation.test.ts  apiClient.test.ts  conftest.py  download.test.ts  fileValidation.test.ts  mastService.test.ts  mastSession.test.ts  predictionService.test.ts  predictionValidation.test.ts  setup.ts  (+8 more)
(+201 files in other folders)
