[project]
name = "transitlens-platform-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "reportlab>=4.2,<5",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = ["pytest>=8.3,<10", "pytest-asyncio>=0.25,<1"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

